tests/errors/undefined_method.orus
struct Foo {}
let f: Foo = Foo{}
f.bar()
